Front End update for Wallet App
Few changes made to Register, Login, Dashboard, Send Money pages.

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -48,25 +48,23 @@
           <nav class="nav flex-column nav-pills nav-fill">
             <li class="nav-item pt-3">
               <a class="nav-link active turnBlack" href="#">
-                Dashboard <i class="fa-solid fa-table-columns"></i></a>
+                <b>Dashboard</b> <i class="fa fa-table-columns"></i></a>
             </li>
             <li class="nav-item pt-3">
               <a class="nav-link active turnBlack" href="./SendMoney.html">
-                Send Money <i class="fa-sharp fa-solid fa-paper-plane"></i></a>
+                <b>Send Money</b> <i class="fa fa-paper-plane"></i></a>
             </li>
           </nav>
         </div>
-TESTING GITDESKTOP
-
         <div class="pt-19">
           <nav class="nav flex-column nav-pills nav-fill">
             <li class="nav-item pt-3">
               <a class="nav-link active turnBlack" href="#">
-                Notifications <i class="fa-sharp fa-solid fa-bell"></i></a>
+                <b>Notifications</b> <i class="fa fa-bell"></i></a>
             </li>
             <li class="nav-item pt-3">
               <a class="nav-link active turnBlack" href="./UserLogIn.html">
-                Logout <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+                <b>Logout</b> <i class="fa fa-arrow-right-from-bracket"></i></a>
             </li>
           </nav>
         </div>
@@ -78,7 +76,7 @@ TESTING GITDESKTOP
           <div class="col-4">
             <div class="card testShadow">
               <div class="card-header bg-danger">
-                Balance
+                <b>Balance</b>
               </div>
               <div class="card-body">
                 <h4 class="card-title">NGN 10,000.00</h4>
@@ -91,7 +89,7 @@ TESTING GITDESKTOP
               <div class="col-sm-6">
                 <div class="card testShadow">
                   <div class="card-header bg-danger">
-                    Add Funds
+                    <b>Add Funds</b>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">NGN 10,000.00</h4>
@@ -102,7 +100,7 @@ TESTING GITDESKTOP
               <div class="col-sm-6">
                 <div class="card testShadow">
                   <div class="card-header bg-danger">
-                    Withdraw Funds
+                    <b>Withdraw Funds</b>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">NGN 10,000.00</h4>
@@ -113,16 +111,27 @@ TESTING GITDESKTOP
             </div>
           </div>
         </div>
-        <!-- dont touch -->
 
         <div class="row p-3 testShadow">
           <div class="col-12 bg-danger">
             <div class="row pb-3">
-              <div class="col-10 pt-3">TRANSACTIONS</div>
-              <div class="col-1 pt-3"><i class="fa-solid fa-magnifying-glass"></i></div>
-              <div class="col-1 pt-3"><i class="fa-sharp fa-solid fa-filter"></i></div>
+              <div class="col-10 pt-3"><b>TRANSACTIONS</b></div>
+              <div class="col-md-1 pt-2 mx-auto">
+                <span class="input-group-append">
+                  <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </span>
+              </div>
+
+              <div class="col-md-1 pt-2 mx-auto">
+                <span class="input-group-append">
+                  <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+                    <i class="fa fa-filter"></i>
+                  </button>
+                </span>
+              </div>
             </div>
-            
           </div>
 
 
