--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -28,7 +28,7 @@
             
           </div>
           <div class="d-flex">
-            <div class="me-2">Joy .E. Ihama</div>
+            <div class="me-2">Welcome Username</div>
             <a href="./user/UserDetail.html">
               <img src="../images/girl.jpg"
                 class="img-fluid rounded-circle"
@@ -79,8 +79,7 @@
                 <b>Balance</b>
               </div>
               <div class="card-body">
-                <h4 class="card-title">NGN 10,000.00</h4>
-                <p class="card-text">Current Balance</p>
+                <p class="card-text">NGN 10,000.00</p>
               </div>
             </div>
           </div>
@@ -89,22 +88,10 @@
               <div class="col-sm-6">
                 <div class="card testShadow">
                   <div class="card-header bg-danger">
-                    <b>Add Funds</b>
+                    <b>Account Number</b>
                   </div>
                   <div class="card-body">
-                    <h4 class="card-title">NGN 10,000.00</h4>
-                    <p class="card-text">Current Balance</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="card testShadow">
-                  <div class="card-header bg-danger">
-                    <b>Withdraw Funds</b>
-                  </div>
-                  <div class="card-body">
-                    <h4 class="card-title">NGN 10,000.00</h4>
-                    <p class="card-text">Current Balance</p>
+                    <p class="card-text">0664532567</p>
                   </div>
                 </div>
               </div>
