--- a/html/UserSignUp.HTML
+++ b/html/UserSignUp.HTML
@@ -35,7 +35,7 @@
                   alt="Sample photo" class="img-fluid form-img"/>
               </div>
               <form class="col-xl-6 signUpForm" id="signUpForm" 
-                  onsubmit="setTimeout(function(){window.location.reload();},2000);">
+                onsubmit="setTimeout(function(){window.location.reload();},2000);">
                 <div class="card-body p-md-5 text-black ">
                   <b><h3 class="mb-3 text-uppercase text-center">Sign Up</h3></b>
 
@@ -72,7 +72,6 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="row">
                     <div class="col-md-12 mb-3">
                       <div class="form-outline">
@@ -94,6 +93,23 @@
                     <label class="form-label" for="address">Address</label>
                     <input type="text" id="address" class="form-control " />
                     <p>Error message</p>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <div class="form-outline">
+                        <label class="form-label mt-2" for="pin">Pin</label>
+                        <input type="password" id="pin" class="form-control" />
+                        <p>Error message</p>
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                      <div class="form-outline">
+                        <label class="form-label mt-2" for="conPin">Confirm Pin</label>
+                        <input type="password" id="conPin" class="form-control " />
+                        <p>Error message</p>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="d-flex justify-content-center pt-3">
