--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -12,8 +12,6 @@
   <link rel="stylesheet" href="../css/Dashboard.css">
   <link rel="shortcut icon" href="../images/Logo-.png" type="image/x-icon">
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
-
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
   </style>
@@ -35,7 +33,7 @@
           </div>
           <div class="d-flex">
             <div class="me-2" id="dUsername">Welcome </div>
-            <a href="./user/UserDetail.html">
+            <a href="#">
               <img src="../images/girl.jpg"
                 class="img-fluid rounded-circle"
                 alt="Profile" width="20" height="20"
@@ -47,7 +45,7 @@
     </nav>
   </div>
 
-  <div class="container bg-light">
+  <div class="container bg-light pb-5">
     <div class="row">
       <div class="col-3 borderR bg-white mt-1">
         <div class="">
@@ -175,19 +173,43 @@
 
 
 
-        
-
       </div>
     </div>
   </div>
 
+
+  <div class="container checkBgd">
+    <footer class="text-center text-dark ">
+      <div class="container pt-2">
+        <section class="mb-4">
+          <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+  
+          <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
+            <i class="fab fa-twitter"></i>
+          </a>
+  
+          <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
+            <i class="fab fa-instagram"></i>
+          </a>
+  
+          <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+  
+        </section>
+      </div>
+  
+      <div class="text-center pt-2">
+        © 2020 Copyright <span class="text-dark">Wallet App</span>
+      </div>
+    </footer>
   </div>
 
   <script src="../js/Dashboard.js"></script>
 
   <script src="https://kit.fontawesome.com/de4f84b1fe.js" crossorigin="anonymous"></script>
-
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
 
 </body>
 </html>
