--- a/html/UserLogIn.html
+++ b/html/UserLogIn.html
@@ -36,7 +36,7 @@
                 <h3 class="text-uppercase text-center mb-5">Log In</h3>
 
                 <form id="loginForm">
-                  <div class="form__message form__message--error"></div>
+                  <div class="form__message form__message--error" id="error_msg"></div>
                   <div class="form-outline mb-3">
                     <label class="form-label mt-2" for="userNameLogin">Username</label>
                     <input type="text" id="userNameLogin" class="form-control form-control-lg" />
