--- a/html/UserProfile.html
+++ b/html/UserProfile.html
@@ -4,25 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Globus Wallet | Dashboard</title>
+  <title>Globus Wallet | User Profile</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="../css/Dashboard.css">
+  <link rel="stylesheet" href="../css/UserProfile.css">
   <link rel="shortcut icon" href="../images/Logo-.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="../DataTables/datatables.min.css">
-
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.2.0/css/dataTables.dateTime.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css"/>
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/datetime/1.2.0/js/dataTables.dateTime.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.4.0/js/responsive.bootstrap5.js"></script>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
@@ -34,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light borderB bg-white">
       <div class="container">
         <div class="navbar-brand">
-          <img src="../images/Logo-.png" alt="Sample photo" class="img-fluid logo-img"/>
+          <img src="../images/Logo-.png" alt="Logo" class="img-fluid logo-img"/>
         </div>
   
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -43,7 +31,7 @@
           </div>
           <div class="d-flex">
             <div class="me-2" id="dUsername">Welcome </div>
-            <a href="./UserProfile.html">
+            <a href="#">
               <img src="../images/girl.jpg"
                 class="img-fluid rounded-circle"
                 alt="Profile" width="20" height="20"
@@ -61,7 +49,7 @@
         <div class="">
           <nav class="nav flex-column nav-pills nav-fill">
             <li class="nav-item pt-3 liButton">
-              <a class="nav-link bg-light turnBlack" href="#">
+              <a class="nav-link bg-light turnBlack" href="./Dashboard.html">
                 <div class="col-6 d-flex justify-content-between">
                   <i class="fa fa-house mt-1"></i>
                   <p>Dashboard</p>
@@ -101,54 +89,79 @@
         </div>
       </div>
 
-
       <div class="col-9">
-        <div class="row pb-5">
-          <div class="col-12 pt-3">
-            <div class="card">
-              <div class="card-body">
-                <div class="row ">
-                  <div class="d-flex justify-content-between">
-                    <div>
-                      <div class="card-header colourCont rounded-top">
-                        Balance
-                      </div>
-                      <i class="fa-solid fa-naira-sign nSign me-1"></i>
-                      <span class="spanBal" id="dBalance"></span>
-                    </div>
-                    <div>
-                      <div class="card-header colourCont rounded-top">
-                        Account Number
-                      </div>
-                      <i class="fa fa-user-lock nSign me-1"></i>
-                      <span class="spanBal pt-2" id="dAccount"></span>
-                    </div>
-                  </div>
+        <div>
+          <form>
+            <div class="row mb-3">
+              <input class="form-control" type="text" placeholder="Readonly input here…" readonly>
+            </div>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <div class="form-outline">
+                  <label class="form-label mt-2" for="firstName">First Name</label>
+                  <input type="text" id="firstName" class="form-control " />
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <div class="form-outline">
+                  <label class="form-label mt-2" for="lastName">Last Name</label>
+                  <input type="text" id="lastName" class="form-control " />
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-
-
-        <div class="row p-3 testShadow pt-5">
-          <div class="col-12 colourCont">
-            <div class="row pb-3">
-              <div class="col-10 mt-2"><b>TRANSACTIONS</b></div>
+            <div class="form-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="First name">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Last name">
+              </div>
             </div>
-          </div>
-          <div class="table-responsive mt-3">
-            <table id="example" class="table table-striped" style="width:100%">
-              <thead>
-                <tr>
-                  <th>AMOUNT</th>
-                  <th>DESTINATION ACCOUNT</th>
-                  <th>DATE</th>
-                </tr>
-              </thead>
-              <tbody id="data"></tbody>
-            </table>
-          </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputAddress">Address</label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+            <div class="form-group">
+              <label for="inputAddress2">Address 2</label>
+              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">City</label>
+                <input type="text" class="form-control" id="inputCity">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputState">State</label>
+                <select id="inputState" class="form-control">
+                  <option selected>Choose...</option>
+                  <option>...</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label for="inputZip">Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Check me out
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </form>
         </div>
       </div>
     </div>
@@ -162,17 +175,22 @@
           <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
             <i class="fab fa-facebook-f"></i>
           </a>
+  
           <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
             <i class="fab fa-twitter"></i>
           </a>
+  
           <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
             <i class="fab fa-instagram"></i>
           </a>
+  
           <a class="btn btn-outline-light m-1 rounded-circle" href="#!" role="button">
             <i class="fab fa-linkedin-in"></i>
           </a>
+  
         </section>
       </div>
+  
       <div class="text-center pt-2">
         Copyright &copy; 
         <script>document.write(new Date().getFullYear())</script> 
@@ -181,15 +199,5 @@
     </footer>
   </div>
 
-  <script src="../js/Dashboard.js"></script>
-
-  <script src="https://kit.fontawesome.com/de4f84b1fe.js" crossorigin="anonymous"></script>
-
-  <script type="text/javascript" src="../DataTables/datatables.min.js"></script>
-
 </body>
 </html>
-
-
-
-  
